# BSidesFW2026Badge

./: .dockerignore  .gitignore  APP_DEVELOPMENT.md  BSides_planner.py  SIMULATOR_LONG_PRESS_TEST.md  connect4.py  pyproject.toml  remote_sign_cmd.py  tools.py
.github/: copilot-instructions.md
STLs/: Badge_Top_Screen_Cover.stl
STLs/2025/: BSides2025-Badge_Covers.3mf  BSides2025-ScreenBezelV4.3mf  BSides2025-ScreenCoverV4.stl  (+3 more)
docs/: CLEANUP_SUMMARY.md  REGRESSION_TEST_GUIDE.md  REMOTE_SIGN_USAGE.md  SCREENSHOT_GUIDE.md  SIMULATOR_ARCHITECTURE.md  SIMULATOR_DESIGN.md  SIMULATOR_DEVELOPMENT_PLAN.md  SIMULATOR_DIAGRAMS.md  SIMULATOR_DOCUMENTATION_INDEX.md  SIMULATOR_IMPLEMENTATION_PLAN.md  SIMULATOR_IMPLEMENTATION_REFERENCE.md  SIMULATOR_QUICKSTART.md  SIMULATOR_README.md  SIMULATOR_REFACTOR_SUMMARY.md  SIMULATOR_UPDATE_DESIGN.md  SIMULATOR_USER_GUIDE.md  TODO.md  WIFI_AUTOCONNECT_FIX.md
simulator/: .gitignore  ARCHITECTURE.md  BINARY_PROTOCOL_README.md  BUTTON_MAPPING.md  CHANGES.md  ENHANCED_SIMULATOR_README.md  INTERRUPT_ARCHITECTURE.md  PHASE0_README.md  README.md  README_REGRESSION_TEST.md  RECENT_UPDATES.md  REGRESSION_TEST_IMPLEMENTATION.md  config.json  demo_regression_test.py  gui.py  gui_binary.py  gui_enhanced.py  logger.py  main.py  main_binary.py  main_enhanced.py  main_improved.py  regression_test.py  run.sh  run_binary.sh  run_enhanced.sh  setup_wizard.py  simulator.py  take_screenshot.py
src/: app_directory.py  boot.py  controller.py  main.py
tools/: fetch_schedule.py
web_simulator/: Dockerfile  README.md  docker-compose.yml  index.html  style.css
(+100 files in other folders)
