[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-ampy>=1.1.0",
    "esptool>=4.8.1",
    "micropython-esp32-stubs>=1.24.1.post1",
    "mido>=1.3.3",
    "mpremote>=1.24.1",
    "mpy-cross>=1.24.1.post2",
    "numpy>=2.4.0",
    "pillow>=11.1.0",
    "pygame-gui>=0.6.14",
    "pygame>=2.6.1",
    "rshell>=0.0.36",
    "typer>=0.15.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
